--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.guide.FrontShotGuideFragment">
 
@@ -44,7 +45,10 @@
 
     <com.pizza.kkomdae.ui.CameraSideOverlayView
         android:id="@+id/overlayView"
-        android:layout_width="match_parent"
+        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
         android:visibility="gone"
         android:layout_height="match_parent"/>
     <ImageButton
