design: step1 촬영 취소 버튼 변경
- 취소 버튼 조금 밝게 변경

--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
@@ -62,7 +62,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:layout_margin="24dp"/>
+        android:layout_margin="24dp"
+        app:tint="#CCFFFFFF" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_guide"
