--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_back_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_back_shot_guide.xml
@@ -46,6 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="24dp"
+        app:tint="#CCFFFFFF"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cancel"
         android:id="@+id/btn_back"/>
