--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
@@ -47,6 +47,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="24dp"
         android:layout_height="wrap_content"
+        app:tint="#CCFFFFFF"
         android:src="@drawable/ic_cancel"
         android:id="@+id/btn_back"/>
 
