--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_right_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_right_guide.xml
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cancel"
+        app:tint="#80FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="?attr/selectableItemBackgroundBorderless"
