--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_result.xml
@@ -13,7 +13,6 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:tint="@color/gray300"
         android:padding="4dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_cancel"
@@ -29,6 +28,7 @@
         android:layout_marginBottom="32dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="4dp"
+        app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
