--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_back_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_back_shot_guide.xml
@@ -266,13 +266,13 @@
         app:layout_constraintBottom_toTopOf="@id/btn_cancel"
         style="@style/Caption1"
         android:paddingVertical="8dp"
-
         app:layout_constraintTop_toBottomOf="@id/cl_text4"
         app:layout_constraintStart_toStartOf="@id/cl_text3"
         android:background="@drawable/border_gray_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="50dp"
         android:paddingStart="14dp"
+        android:textColor="@color/gray50"
         android:backgroundTint="#66FFFFFF"/>
 
     <Button
