--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
@@ -273,6 +273,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="50dp"
         android:paddingStart="14dp"
+        android:textColor="@color/gray50"
         android:backgroundTint="#66FFFFFF"/>
 
     <Button
