--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_right_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_right_guide.xml
@@ -275,6 +275,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="50dp"
         android:paddingStart="14dp"
+        android:textColor="@color/gray50"
         android:backgroundTint="#66FFFFFF"/>
 
     <Button
