--- a/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
@@ -9,6 +9,10 @@
         android:layout_width="12dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_back"
+        android:clickable="true"
+        android:focusable="true"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
