--- a/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
@@ -4,19 +4,26 @@
     android:layout_height="?actionBarSize"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/btn_back"
-        android:layout_width="12dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_back"
+    <FrameLayout
+        android:id="@+id/back_button_container"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:focusable="true"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="24dp"/>
+        android:layout_marginStart="0dp">
+
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="12dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_back"
+            android:layout_gravity="center"
+            android:clickable="false"/>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/tv_title"
@@ -27,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="18dp"
+        android:textSize="20dp"
         android:textColor="@color/gray800"
         android:fontFamily="@font/pretendard_semi_bold"
         android:lineSpacingMultiplier="1.4"/>
