fix: 자동 촬영 수정
- 자동촬영 시 고화질 다운로드
- 16:9사이즈로 고정
- 밝기, 선명도, 흔들림 방지
S12P21D101-222

--- a/ai/AutoCamera/app/src/main/res/layout/activity_main.xml
+++ b/ai/AutoCamera/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,7 +19,7 @@
     <com.example.autocamera.OverlayView
         android:id="@+id/overlay"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="@id/previewView"
         app:layout_constraintEnd_toEndOf="@id/previewView"
         app:layout_constraintStart_toStartOf="@id/previewView"
