--- a/backend/kkomdae/src/main/resources/templates/pdf-page.html
+++ b/backend/kkomdae/src/main/resources/templates/pdf-page.html
@@ -56,7 +56,7 @@
             정보 입력
         </div>
         <div class="card-body">
-            <form th:action="@{/pdf5}" method="POST">
+            <form th:action="@{pdf5}" method="POST">
                 <div class="mb-3">
                     <label for="name" class="form-label">이름</label>
                     <input type="text" class="form-control" id="name" name="name" placeholder="이름을 입력하세요" required>
