--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_final_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_final_result.xml
@@ -15,40 +15,40 @@
 
         <TextView
             android:id="@+id/tv_title"
+            style="@style/Display1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="확인해주세요!"
+            android:text="최종 결과"
             android:textColor="@color/gray700"
-            style="@style/Display1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_description1"
+            style="@style/Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:gravity="center"
-            android:text="노트북 정보가 정확한지 다시 한 번 확인해주세요."
-            android:textColor="@color/gray300"
-            style="@style/Body2"
             android:lineSpacingExtra="4dp"
+            android:text="등록한 기기 내용과 AI 분석 결과를 확인해주세요"
+            android:textColor="@color/gray300"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
         <TextView
             android:id="@+id/tv_description2"
+            style="@style/Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:text="입력 후에는 정보 수정이 불가합니다."
-            android:textColor="@color/gray300"
-            style="@style/Body2"
             android:lineSpacingExtra="4dp"
+            android:text="꼼대가 SSAFY에 제출해드릴게요!"
+            android:textColor="@color/gray300"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description1" />
@@ -57,51 +57,25 @@
             android:id="@+id/iv_character"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_marginTop="24dp"
-            android:contentDescription="확인 캐릭터"
-            android:src="@drawable/ic_laptop_info_confirm"
+            android:src="@drawable/ic_final_kkomi"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description2" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_confirm"
+            style="@style/Title1"
+            android:layout_width="0dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/bg_button_intro"
+            android:text="확인"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_character">
-
-            <TextView
-                android:id="@+id/btn_cancel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/bg_button_cancel"
-                android:paddingVertical="16dp"
-                android:text="닫기"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                style="@style/Title3"
-                android:layout_marginEnd="8dp" />
-
-            <TextView
-                android:id="@+id/btn_confirm"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/bg_button_confirm"
-                android:paddingVertical="16dp"
-                android:text="입력 완료하기"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                style="@style/Title3"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/iv_character" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
