feat: 관리자 페이지 이미지, pdf 연결 S12P21D101-226

--- a/backend/kkomdae/src/main/resources/templates/devices.html
+++ b/backend/kkomdae/src/main/resources/templates/devices.html
@@ -31,7 +31,9 @@
 </head>
 <body>
 <div class="container mt-3">
-    <img th:src="@{/ssafy.svg}" style="width: 120px; height: 90px;" alt="이미지 설명" />
+    <a th:href="@{/api/admin/students}">
+        <img th:src="@{/image/ssafy.svg}" style="width: 120px; height: 90px;" alt="이미지 설명" />
+    </a>
 </div>
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
