--- a/backend/kkomdae/src/main/resources/templates/students.html
+++ b/backend/kkomdae/src/main/resources/templates/students.html
@@ -85,7 +85,9 @@
 </head>
 <body>
 <div class="container mt-3">
-    <img th:src="@{/ssafy.svg}" style="width: 120px; height: 90px;" alt="이미지 설명" />
+    <a th:href="@{/api/admin/students}">
+        <img th:src="@{/image/ssafy.svg}" style="width: 120px; height: 90px;" alt="이미지 설명" />
+    </a>
 </div>
 
 <div class="container mt-5">
@@ -189,7 +191,7 @@
                         <span class="checkmark"></span>
                     </label>
                 </td>
-                <td th:text="${student.studentNum}"></td>
+                <td th:text="${student.getStudentId()}"></td>
                 <td th:text="${student.name}"></td>
                 <td th:text="${student.region}"></td>
                 <td th:text="${student.classNum}"></td>
