--- a/backend/kkomdae/src/main/resources/templates/test-results.html
+++ b/backend/kkomdae/src/main/resources/templates/test-results.html
@@ -48,9 +48,11 @@
     </style>
 </head>
 <body>
-<div class="container mt-5">
-
-    <div class="d-flex justify-content-between align-items-center mb-4">
+<div class="container">
+    <a th:href="@{/api/admin/students}">
+        <img th:src="@{/image/ssafy.svg}" style="width: 120px; height: 90px;" alt="이미지 설명" />
+    </a>
+    <div class="d-flex justify-content-between align-items-center mt-3 mb-4">
         <h2 class="mb-0">노트북 테스트 결과 목록</h2>
         <div class="admin-actions">
             <a th:href="${referer}" class="btn btn-primary">돌아가기</a>
@@ -98,7 +100,7 @@
                 </td>
                 <td th:text="${result.date}">날짜</td>
                 <td>
-                    <a class="btn btn-sm btn-outline-primary" th:href="@{/admin/photos(testResultId=${result.laptopTestId})}" role="button">
+                    <a class="btn btn-sm btn-outline-primary" th:href="@{/api/admin/photos(testResultId=${result.laptopTestId})}" role="button">
                         <i class="fas fa-info-circle"></i> 상세
                     </a>
                 </td>
