--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
@@ -723,27 +723,22 @@
         </androidx.cardview.widget.CardView>
 
 
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
     <Button
+        android:id="@+id/btn_submit"
         android:layout_width="0dp"
-        android:layout_height="51dp"
+        android:layout_height="56dp"
         android:backgroundTint="@color/orange500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="제출하기"
-        style="@style/Display3"
+        style="@style/Title1"
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="24dp"/>
-
-
-
 
 
 
