--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -30,7 +30,7 @@
             android:id="@+id/tv_welcome_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이송희님 안녕하세요!"
+            tools:text="이송희님 안녕하세요!"
             style="@style/Title1"
             app:layout_constraintStart_toEndOf="@id/iv_logo_icon"
             app:layout_constraintTop_toTopOf="parent"
