--- a/ai/AutoCamera/app/src/main/res/layout/activity_main.xml
+++ b/ai/AutoCamera/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:id="@+id/previewView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:scaleType="fillCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
