design: 멘트 수정 S12P21D101-191

--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_submit_confirm.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_submit_confirm.xml
@@ -28,8 +28,8 @@
         android:id="@+id/tv_dialog_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="검사 내용은 PDF로 생성되어\n관리자에게 전송됩니다."
-        style="@style/Body2"
+        android:text="검사 내용은 PDF로 생성되어관리자에게 전송됩니다."
+        style="@style/Label3"
         android:textColor="@color/gray400"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
