--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -101,7 +101,7 @@
                     android:id="@+id/tv_sub_message_part3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="가 찾아드려요."
+                    android:text="가 찾아드려요"
                     style="@style/Display2"
                     android:textColor="@color/gray700"
                     app:layout_constraintBottom_toBottomOf="@id/tv_sub_message_part2"
@@ -198,7 +198,7 @@
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="@id/tv_laptop_sub"
                                 app:layout_constraintTop_toBottomOf="@id/tv_laptop_sub"
-                                android:text="안전하게 사용하세요."/>
+                                android:text="안전하게 사용하세요"/>
 
                             <ImageView
                                 android:layout_width="120dp"
@@ -282,7 +282,7 @@
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="@id/tv_mobile_sub"
                                 app:layout_constraintTop_toBottomOf="@id/tv_mobile_sub"
-                                android:text="안전하게 관리하세요."/>
+                                android:text="안전하게 관리하세요"/>
 
                             <ImageView
                                 android:layout_width="110dp"
@@ -364,7 +364,7 @@
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="@id/tv_iot_sub"
                                 app:layout_constraintTop_toBottomOf="@id/tv_iot_sub"
-                                android:text="효율적으로 활용하세요."/>
+                                android:text="효율적으로 활용하세요"/>
 
                             <ImageView
                                 android:layout_width="110dp"
