--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
@@ -240,13 +240,28 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
+        android:id="@+id/btn_skip"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:backgroundTint="@color/gray500"
+        android:textColor="@color/white"
+        android:text="건너뛰기"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="16dp"
+        style="@style/Title1"
+        app:layout_constraintBottom_toTopOf="@id/btn_next"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
         android:id="@+id/btn_next"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:backgroundTint="@color/gray500"
         android:textColor="@color/white"
         android:text="촬영하기"
-        android:layout_margin="24dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="24dp"
         style="@style/Title1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
