--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
@@ -308,8 +308,6 @@
             android:layout_marginEnd="24dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="85dp"
             app:layout_constraintTop_toBottomOf="@id/fl_step3"
             android:layout_marginTop="12dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -721,6 +719,147 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
+
+        <FrameLayout
+            android:id="@+id/fl_step4"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/step_circle_background"
+            android:backgroundTint="@color/blue100"
+            android:gravity="center"
+            android:layout_marginTop="30dp"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_info">
+
+            <TextView
+                style="@style/Title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="4"
+                android:textColor="@color/blue500"
+                android:textSize="15sp"/>
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/tv_step4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비고"
+            style="@style/Title1"
+            app:layout_constraintStart_toEndOf="@id/fl_step4"
+            app:layout_constraintTop_toTopOf="@id/fl_step4"
+            app:layout_constraintBottom_toBottomOf="@id/fl_step4"
+            android:layout_marginStart="16dp"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_note"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="85dp"
+            app:layout_constraintTop_toBottomOf="@id/fl_step4"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp">
+
+                <!-- 비고 제목 -->
+                <TextView
+                    android:id="@+id/tv_note_title"
+                    style="@style/Title3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="기타 참고사항"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/line_note"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@color/gray200"
+                    app:layout_constraintTop_toBottomOf="@id/tv_note_title" />
+
+                <!-- 전면부 -->
+                <TextView
+                    android:id="@+id/tv_front_title"
+                    style="@style/Title4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="전면부"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/line_note" />
+
+                <TextView
+                    android:id="@+id/tv_front_note1"
+                    style="@style/Body2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="좌측 상단에 스크래치 존재"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_front_title" />
+
+                <TextView
+                    android:id="@+id/tv_front_note2"
+                    style="@style/Body2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="좌측 상단에 스크래치 존재"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_front_note1" />
+
+                <!-- 후면부 -->
+                <TextView
+                    android:id="@+id/tv_back_title"
+                    style="@style/Title4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="후면부"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_front_note2" />
+
+                <TextView
+                    android:id="@+id/tv_back_note1"
+                    style="@style/Body2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="좌측 상단에 스크래치 존재"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_back_title" />
+
+                <TextView
+                    android:id="@+id/tv_back_note2"
+                    style="@style/Body2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="좌측 상단에 스크래치 존재"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_back_note1" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
