design : ui 수정 S12P21D101-193

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -102,7 +102,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="가 찾아드려요"
-                    style="@style/Display2"
+                    style="@style/Display3"
                     android:textColor="@color/gray700"
                     app:layout_constraintBottom_toBottomOf="@id/tv_sub_message_part2"
                     app:layout_constraintStart_toEndOf="@id/tv_sub_message_part2"
@@ -188,7 +188,7 @@
                                 android:layout_marginTop="10dp"
                                 app:layout_constraintStart_toStartOf="@id/tv_laptop_title"
                                 app:layout_constraintTop_toBottomOf="@id/tv_laptop_title"
-                                android:text="AI로 상태를 점검하고,"/>
+                                android:text="AI로 상태를 점검하고"/>
 
                             <TextView
                                 android:id="@+id/tv_laptop_sub2"
@@ -198,7 +198,7 @@
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="@id/tv_laptop_sub"
                                 app:layout_constraintTop_toBottomOf="@id/tv_laptop_sub"
-                                android:text="안전하게 사용하세요"/>
+                                android:text="안전하게 사용하세요."/>
 
                             <ImageView
                                 android:layout_width="120dp"
@@ -269,7 +269,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
-                                android:text="모바일 기기 상태를 기록하고,"
+                                android:text="모바일 기기 상태를 기록하고"
                                 app:layout_constraintStart_toStartOf="@id/tv_mobile_title"
                                 app:layout_constraintTop_toBottomOf="@id/tv_mobile_title" />
 
@@ -282,7 +282,7 @@
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="@id/tv_mobile_sub"
                                 app:layout_constraintTop_toBottomOf="@id/tv_mobile_sub"
-                                android:text="안전하게 관리하세요"/>
+                                android:text="안전하게 관리하세요."/>
 
                             <ImageView
                                 android:layout_width="110dp"
@@ -354,7 +354,7 @@
                                 android:layout_marginTop="10dp"
                                 app:layout_constraintStart_toStartOf="@id/tv_iot_title"
                                 app:layout_constraintTop_toBottomOf="@id/tv_iot_title"
-                                android:text="스마트 기기 상태를 점검하고,"/>
+                                android:text="스마트 기기 상태를 점검하고"/>
 
                             <TextView
                                 android:id="@+id/tv_iot_sub2"
@@ -364,7 +364,7 @@
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="@id/tv_iot_sub"
                                 app:layout_constraintTop_toBottomOf="@id/tv_iot_sub"
-                                android:text="효율적으로 활용하세요"/>
+                                android:text="효율적으로 활용하세요."/>
 
                             <ImageView
                                 android:layout_width="110dp"
