--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_result.xml
@@ -69,12 +69,13 @@
         app:layout_constraintTop_toBottomOf="@id/tv_text2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
         <ImageView
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@color/blue500"
-            />        
+            android:src="@color/blue500" />
+
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
