fix: 로딩화면에서 분석결과 넘어가도록 수정 S12P21D101-275
Former-commit-id: 225de76c23a0019261069728404c0b6a3f45112f

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_loading.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_loading.xml
@@ -223,7 +223,8 @@
         android:text="분석 결과 보러가기"
         android:textColor="@color/white"
         style="@style/Title1"
-        android:padding="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         android:backgroundTint="#4285F4"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent" />
