--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step4_ai_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step4_ai_result.xml
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="꼼대가 분석한 결과를 확인해주세요"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/tv_text1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,12 +61,12 @@
         android:id="@+id/cv_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="4dp"
-        app:layout_constraintDimensionRatio="3:2"
-        android:layout_marginTop="24dp"
+        app:layout_constraintDimensionRatio="4:3"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/tv_text3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -84,9 +84,10 @@
         android:id="@+id/tv_result_status"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:gravity="end"
         android:text="발견된 결함이 없습니다."
         android:textColor="@color/blue500"
@@ -101,7 +102,11 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginVertical="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="12dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+         android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@id/tv_result_status"
         app:layout_constraintBottom_toTopOf="@id/btn_retry"/>
 
