--- a/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="80dp"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/white"
-    app:cardCornerRadius="18dp"
-    android:layout_marginVertical="15dp"
+    app:cardCornerRadius="15dp"
+    android:layout_marginHorizontal="4dp"
     app:strokeColor="@color/gray200"
     app:strokeWidth="2dp"
-    android:layout_marginHorizontal="15dp"
-    app:cardElevation="4dp"
+    app:cardElevation="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_height="wrap_content">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="4dp">
 
         <ImageView
             android:id="@+id/iv_position"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="4dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_position"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,19 +28,18 @@
             android:src="@drawable/ic_front_laptop"/>
 
         <TextView
+            android:id="@+id/tv_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:textSize="12sp"
+            android:textColor="@color/gray500"
             app:layout_constraintTop_toBottomOf="@id/iv_position"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/tv_position"
             android:text="전면부"/>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
 </com.google.android.material.card.MaterialCardView>
+
