--- a/backend/kkomdae/src/main/resources/templates/students.html
+++ b/backend/kkomdae/src/main/resources/templates/students.html
@@ -51,6 +51,7 @@
             left: 0;
             height: 20px;
             width: 20px;
+            width: 20px;
             background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 3px;
